sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:7: error: value unary_! is not a member of Int
    if (getCouleur(debut)==BLEU && !debut<len){
                                   ^DutchFlagAlgo:10: error: value unary_! is not a member of Int
    if (getCouleur(fin)==ROUGE && !fin>0){
                                  ^